--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             if (/android/i.test(navigator.userAgent)) {
                 window.location.href = "https://play.google.com/store/search?q=Andes%20laundry&c=apps&hl=en";
             } else if (/iphone|ipod|ipad/i.test(navigator.userAgent)) {
-                window.location.href = "https://apps.apple.com/us/app/idYOUR_APP_ID";
+                window.location.href = ""https://wa.me/8688661039";";
             }
         };
     </script>
