--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
             if (/android/i.test(navigator.userAgent)) {
                 window.location.href = "https://play.google.com/store/search?q=Andes%20laundry&c=apps&hl=en";
             } else if (/iphone|ipod|ipad/i.test(navigator.userAgent)) {
-                window.location.href = ""https://wa.me/8688661039";";
+                window.location.href = "https://wa.me/8688661039";
             }
         };
     </script>
 </head>
 <body>
     <h1>Redirecting...</h1>
-    <p>If you are not redirected automatically, please <a href="https://play.google.com/store/search?q=Andes%20laundry&c=apps&hl=en">click here</a> for Android or <a href="https://apps.apple.com/us/app/idYOUR_APP_ID">click here</a> for iOS.</p>
+    <p>If you are not redirected automatically, please <a href="https://play.google.com/store/search?q=Andes%20laundry&c=apps&hl=en">click here</a> for Android or <a href="https://wa.me/8688661039">click here</a> for iOS.</p>
 </body>
 </html>
