--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,5 +17,22 @@
 <body>
     <h1>Redirecting...</h1>
     <p>If you are not redirected automatically, please <a href="https://play.google.com/store/search?q=Andes%20laundry&c=apps&hl=en">click here</a> for Android or <a href="https://wa.me/8626076578">click here</a> for iOS.</p>
+</body>
+</html>
+ -->
+
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App Store Redirect</title>
+    <script type="text/javascript">
+        window.location.replace(/android/i.test(navigator.userAgent) 
+            ? "https://play.google.com/store/search?q=Andes%20laundry&c=apps&hl=en" 
+            : "https://wa.me/8626076578");
+    </script>
+</head>
+<body>
 </body>
 </html>
